crates/keron-lang/tests/corpus/errors/check/if_no_else_value_branch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `if` branches have mismatched types: `then` is `Int`, `else` is `Void`
  --> 1:17
  |
1 | val r = if true { 1 }
  |                 ^^^^^^
